# chrono-run

./: .gitignore  CMakeLists.txt  README.md  build.sh  conanfile.txt  config.h.in  configure.sh
src/: main.cpp
src/app/: App.cpp  App.h  CMakeLists.txt
src/app/include/: IGameViewEvent.h  IGameViewModel.h  IGraphicalObject.h  IHUDView.h  IHUDViewModel.h  IInputManager.h  IPlayerEvents.h  IPlayerViewModel.h  IRenderEngine.h
src/app/ui/: GameView.cpp  GameView.h  HUD.cpp  HUD.h
src/app/ui/engine/: RenderEngine.cpp  RenderEngine.h
src/app/ui/events/: UiEvent.cpp  UiEvent.h
src/app/ui/game/: GameView.cpp  GameView.h  GameViewModel.cpp  GameViewModel.h
src/app/ui/hud/: HUDView.cpp  HUDView.h  HUDViewModel.cpp  HUDViewModel.h
src/app/ui/player/: PlayerEventImpl.cpp  PlayerEventImpl.h  PlayerView.cpp  PlayerView.h  PlayerViewModel.cpp  PlayerViewModel.h
src/app/utils/: Printers.h
src/core/: CMakeLists.txt
src/core/entities/: Player.cpp  Player.h  TimeState.cpp  TimeState.h
src/core/include/: IPlayer.h  ITimeControllerRepository.h  ITimeState.h
src/core/logic/: TimeController.cpp  TimeController.h
src/core/repository/: TimeControllerRepository.cpp  TimeControllerRepository.h
src/core/utils/: Logger.h
src/domain/: CMakeLists.txt
src/domain/usecases/: ManipulateTime.cpp  ManipulateTime.h  UpdatePlayerPosition.cpp  UpdatePlayerPosition.h
src/tests/: CMakeLists.txt
src/tests/mocks/internalsources/: MockGameViewModel.h  MockPlayer.h  MockPlayerEvents.h  MockTimeControllerRepository.h  MockTimeState.h
src/tests/ui/game/: GameViewModelTest.cpp  GameViewTest.cpp
src/tests/ui/player/: PlayerEventImplTest.cpp  PlayerViewModelTest.cpp
